# libudon

./: .gitignore  2025-12-28.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODO.md  generate-parser.sh  implementation-phase-2-notes.md  implementation-phase-3.md  regenerate-parser
_archive/: PARSER-GEN-HISTORY.md
_archive/generator/: 2025-12-28-afternoon.md  2025-12-28-morning.md  2025-12-29.md  udon-v3.rmachine  udon.machine
_archive/generator/gen-parser-poc/src/: lib.rs
examples/: minimal.udon
gen-parser-poc/: Cargo.toml
gen-parser-poc/benches/: parser_comparison.rs
gen-parser-poc/src/: callback.rs  nightly.rs  ringbuffer.rs
generator/: GENMACHINE-ANALYSIS.md  genmachine-rs  genmachine-v4.md  parser-gen.md  udon-v2.rmachine  udon-v4.rmachine  udon.desc  udon.machine  udon.rmachine  values.desc
generator/_archive/: 2025-12-28-evening.md
generator/_archive/templates/: parser.rs.liquid
generator/templates/: parser.rs.liquid  parser.rs.liquid.old
udon-core/: Cargo.toml
udon-core/benches/: compare.rs  parse.rs  values.rs
udon-core/examples/: bench_tree.rs  boxed_event_size.rs  check_sizes.rs  debug_inline.rs  debug_interp.rs  event_layout.rs  gen_events.rs  manual_test.rs  profile_events.rs  profile_mathml.rs  profile_parse.rs  profile_sections.rs  show_formats.rs  simple_parse.rs  stdin_parse.rs  test_comments.rs  test_escapes.rs  test_if.rs  test_parse.rs  tree_parse.rs
udon-core/src/: event.rs  lib.rs  parser.rs  streaming.rs  tree.rs  value.rs  values_parser.rs
udon-core/tests/: boundaries.rs  canonical.rs  debug_freeze.rs  parsing.rs  properties.proptest-regressions  properties.rs  streaming.rs  values_proptest.proptest-regressions  values_proptest.rs
udon-core/tests/common/: generators.rs  harness.rs  loader.rs  mod.rs
udon-core/tests/fixtures/: arrays.yaml  attributes.yaml  comment_indentation.yaml  comments.yaml  comments_and_text.yaml  dynamics.yaml  element_class.yaml  element_combined.yaml  element_id.yaml  element_names.yaml  element_recognition.yaml  element_suffix.yaml  elements.yaml  embedded_elements.yaml  error_cases.yaml  escape_prefix.yaml  escapes.yaml  freeform_blocks.yaml  indentation.yaml  indentation_edge_cases.yaml  indentation_hierarchy.yaml  inline_attributes.yaml  inline_comments.yaml  inline_element_nesting.yaml  literal_escape.yaml  prose_dedentation.yaml  references.yaml  suffix_positions.yaml  temporal.yaml  text.yaml  value_types.yaml  values.yaml
udon-ffi/src/: lib.rs
(+1 files in other folders)
