[workspace]
members = ["udon-core"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "MIT"
authors = ["Joseph Wecker"]
description = "UDON parser - Universal Document & Object Notation"
repository = "https://github.com/josephwecker/libudon"

[workspace.dependencies]
unicode-xid = "0.2"
memchr = "2.7"
phf = { version = "0.11", features = ["macros"] }

# Dev dependencies
criterion = "0.5"
pretty_assertions = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"

# Comparison parsers for benchmarks
pulldown-cmark = "0.12"
quick-xml = "0.37"
serde_json = "1.0"
toml = "0.8"

# Optimized release profile
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

# Benchmark profile - maximum optimization
[profile.bench]
inherits = "release"
debug = false
[profile.profiling]
inherits = "release"
debug = true
strip = false
