[package]
name = "udon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core UDON parser - streaming event-based parser"

[dependencies]
unicode-xid = { workspace = true }
memchr = { workspace = true }
phf = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
proptest = "1.4"
lexical-core = { version = "1.0", features = ["parse-integers", "radix"] }
pulldown-cmark = { workspace = true }
quick-xml = { workspace = true }

[features]
default = ["std"]
std = []

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "compare"
harness = false
